todavia queda vastante por hacer filtros

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
 
 
     implementation "androidx.multidex:multidex:$multidex_version"
+
+    //glide par img
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
