--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:requestLegacyExternalStorage="true"
@@ -17,9 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shrine">
-        <activity android:name=".activitys.RegisterActivity"
-            android:screenOrientation="portrait"
-            ></activity>
+        <activity
+            android:name=".activitys.RegisterActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".activitys.CreateActivity"
             android:screenOrientation="portrait"
             />
