--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,29 +4,33 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:name=".app.RopaAplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shrine">
+        <activity android:name=".activitys.UserInfoActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activitys.ImageViewerActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activitys.RegisterActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activitys.CreateActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".activitys.LoginActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".activitys.CreateActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activitys.LoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activitys.DetailsProduct"
             android:screenOrientation="portrait" />
@@ -39,9 +43,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-        android:theme="@style/Base.Theme.AppCompat"/>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
