--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shrine">
-        <activity android:name=".activitys.UserInfoActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".activitys.TrimmingVideo"
+            android:screenOrientation="portrait"
+            ></activity>
+        <activity
+            android:name=".activitys.UserInfoActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activitys.ImageViewerActivity"
             android:screenOrientation="portrait" />
