--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,12 @@ dependencies {
 
     //libreria para ser zoom alas imagenes
     implementation 'com.commit451:PhotoView:1.2.4'
+
+    //librerai de expliare
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
 }
